# cormen-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
examples/: examples.rs  sort_examples.rs
src/: lib.rs  utils.rs
src/sorts/: insertion_sort.rs  merge_sort.rs  mod.rs  selection_sort.rs
